--- a/matheus/src/index.css
+++ b/matheus/src/index.css
@@ -1,13 +1,15 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 5px;
+  background-color: #efefef;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h2 {
+  color: red;
+}
+
+p {
+  background-color: rgb(59, 231, 208);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 10px;
+  
 }
