--- a/matheus/src/App.css
+++ b/matheus/src/App.css
@@ -3,6 +3,13 @@
   
 }
 
+input {
+  padding: 5px;
+  
+}
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -37,3 +44,4 @@
     transform: rotate(360deg);
   }
 }
+
